@@ -9,6 +9,7 @@
 package org.elasticsearch.painless.lookup;
 
 import org.elasticsearch.common.util.Maps;
+import org.elasticsearch.core.Strings;
 import org.elasticsearch.painless.Def;
 import org.elasticsearch.painless.spi.Whitelist;
 import org.elasticsearch.painless.spi.WhitelistClass;
@@ -260,6 +261,14 @@ public final class PainlessLookupBuilder {
         addPainlessClass(clazz, annotations);
     }
 
+    private static IllegalArgumentException lookupException(String formatText, Object... args) {
+        return new IllegalArgumentException(Strings.format(formatText, args));
+    }
+
+    private static IllegalArgumentException lookupException(Throwable cause, String formatText, Object... args) {
+        return new IllegalArgumentException(Strings.format(formatText, args), cause);
+    }
+
     public void addPainlessClass(Class<?> clazz, Map<Class<?>, Object> annotations) {
         Objects.requireNonNull(clazz);
         Objects.requireNonNull(annotations);
@@ -283,22 +292,18 @@ public final class PainlessLookupBuilder {
         if (existingClass == null) {
             javaClassNamesToClasses.put(clazz.getName().intern(), clazz);
         } else if (existingClass != clazz) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + canonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                canonicalClassName
             );
         }
 
         existingClass = canonicalClassNamesToClasses.get(canonicalClassName);
 
         if (existingClass != null && existingClass != clazz) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + canonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                canonicalClassName
             );
         }
 
@@ -333,22 +338,16 @@ public final class PainlessLookupBuilder {
                     if (annotations.get(AliasAnnotation.class)instanceof AliasAnnotation alias) {
                         Class<?> existing = canonicalClassNamesToClasses.put(alias.alias(), clazz);
                         if (existing != null) {
-                            throw new IllegalArgumentException(
-                                "Cannot add alias [" + alias.alias() + "] for [" + clazz + "] that shadows class [" + existing + "]"
-                            );
+                            throw lookupException("Cannot add alias [%s] for [%s] that shadows class [%s]", alias.alias(), clazz, existing);
                         }
                     }
                 }
             } else if (importedClass != clazz) {
-                throw new IllegalArgumentException(
-                    "imported class ["
-                        + importedCanonicalClassName
-                        + "] cannot represent multiple "
-                        + "classes ["
-                        + canonicalClassName
-                        + "] and ["
-                        + typeToCanonicalTypeName(importedClass)
-                        + "]"
+                throw lookupException(
+                    "imported class [%s] cannot represent multiple classes [%s] and [%s]",
+                    importedCanonicalClassName,
+                    canonicalClassName,
+                    typeToCanonicalTypeName(importedClass)
                 );
             } else if (importClassName == false) {
                 throw new IllegalArgumentException("inconsistent no_import parameter found for class [" + canonicalClassName + "]");
@@ -367,15 +366,11 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = canonicalClassNamesToClasses.get(targetCanonicalClassName);
 
         if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found"
-                    + "for constructor [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "target class [%s] not found for constructor [[%s], %s]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -385,15 +380,11 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found "
-                        + "for constructor [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for constructor [[%s], %s]",
+                    canonicalTypeNameParameter,
+                    targetCanonicalClassName,
+                    canonicalTypeNameParameters
                 );
             }
 
@@ -415,15 +406,11 @@ public final class PainlessLookupBuilder {
         PainlessClassBuilder painlessClassBuilder = classesToPainlessClassBuilders.get(targetClass);
 
         if (painlessClassBuilder == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found"
-                    + "for constructor [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "target class [%s] not found for constructor [[%s], %s]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -432,15 +419,11 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for constructor [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for constructor [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
@@ -452,14 +435,11 @@ public final class PainlessLookupBuilder {
         try {
             javaConstructor = targetClass.getConstructor(javaTypeParameters.toArray(Class<?>[]::new));
         } catch (NoSuchMethodException nsme) {
-            throw new IllegalArgumentException(
-                "reflection object not found for constructor "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]",
-                nsme
+            throw lookupException(
+                nsme,
+                "reflection object not found for constructor [[%s], %s]",
+                targetCanonicalClassName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -468,14 +448,11 @@ public final class PainlessLookupBuilder {
         try {
             methodHandle = lookup(targetClass).unreflectConstructor(javaConstructor);
         } catch (IllegalAccessException iae) {
-            throw new IllegalArgumentException(
-                "method handle not found for constructor "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]",
-                iae
+            throw lookupException(
+                iae,
+                "method handle not found for constructor [[%s], %s]",
+                targetCanonicalClassName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -499,18 +476,12 @@ public final class PainlessLookupBuilder {
             newPainlessConstructor = painlessConstructorCache.computeIfAbsent(newPainlessConstructor, Function.identity());
             painlessClassBuilder.constructors.put(painlessConstructorKey.intern(), newPainlessConstructor);
         } else if (newPainlessConstructor.equals(existingPainlessConstructor) == false) {
-            throw new IllegalArgumentException(
-                "cannot add constructors with the same arity but are not equivalent for constructors "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessConstructor.typeParameters())
-                    + "]"
+            throw lookupException(
+                "cannot add constructors with the same arity but are not equivalent for constructors [[%s], %s] and [[%s], %s]",
+                targetCanonicalClassName,
+                typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName,
+                typesToCanonicalTypeNames(existingPainlessConstructor.typeParameters())
             );
         }
     }
@@ -535,17 +506,12 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = canonicalClassNamesToClasses.get(targetCanonicalClassName);
 
         if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "target class [%s] not found for method [[%s], [%s], %s]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                methodName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -555,16 +521,13 @@ public final class PainlessLookupBuilder {
             augmentedClass = loadClass(
                 classLoader,
                 augmentedCanonicalClassName,
-                () -> "augmented class ["
-                    + augmentedCanonicalClassName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+                () -> Strings.format(
+                    "augmented class [%s] not found for method [[%s], [%s], %s]",
+                    augmentedCanonicalClassName,
+                    targetCanonicalClassName,
+                    methodName,
+                    canonicalTypeNameParameters
+                )
             );
         }
 
@@ -574,17 +537,12 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for method "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for method [[%s], [%s], %s]",
+                    canonicalTypeNameParameter,
+                    targetCanonicalClassName,
+                    methodName,
+                    canonicalTypeNameParameters
                 );
             }
 
@@ -594,17 +552,12 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for method [[%s], [%s], %s]",
+                returnCanonicalTypeName,
+                targetCanonicalClassName,
+                methodName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -641,17 +594,12 @@ public final class PainlessLookupBuilder {
         PainlessClassBuilder painlessClassBuilder = classesToPainlessClassBuilders.get(targetClass);
 
         if (painlessClassBuilder == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "target class [%s] not found for method [[%s], [%s], %s]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -665,17 +613,12 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "not found for method [["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for method [[%s], [%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
@@ -683,17 +626,12 @@ public final class PainlessLookupBuilder {
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType),
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -703,16 +641,12 @@ public final class PainlessLookupBuilder {
             try {
                 javaMethod = targetClass.getMethod(methodName, javaTypeParameters.toArray(Class<?>[]::new));
             } catch (NoSuchMethodException nsme) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for method [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + "["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]",
-                    nsme
+                throw lookupException(
+                    nsme,
+                    "reflection object not found for method [[%s], [%s], %s]",
+                    targetCanonicalClassName,
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
         } else {
@@ -720,33 +654,22 @@ public final class PainlessLookupBuilder {
                 javaMethod = augmentedClass.getMethod(methodName, javaTypeParameters.toArray(Class<?>[]::new));
 
                 if (Modifier.isStatic(javaMethod.getModifiers()) == false) {
-                    throw new IllegalArgumentException(
-                        "method [["
-                            + targetCanonicalClassName
-                            + "], ["
-                            + methodName
-                            + "], "
-                            + typesToCanonicalTypeNames(typeParameters)
-                            + "] with augmented class "
-                            + "["
-                            + typeToCanonicalTypeName(augmentedClass)
-                            + "] must be static"
+                    throw lookupException(
+                        "method [[%s], [%s], %s] with augmented class [%s] must be static",
+                        targetCanonicalClassName,
+                        methodName,
+                        typesToCanonicalTypeNames(typeParameters),
+                        typeToCanonicalTypeName(augmentedClass)
                     );
                 }
             } catch (NoSuchMethodException nsme) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for method "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "] "
-                        + "with augmented class ["
-                        + typeToCanonicalTypeName(augmentedClass)
-                        + "]",
-                    nsme
+                throw lookupException(
+                    nsme,
+                    "reflection object not found for method [[%s], [%s], %s] with augmented class [%s]",
+                    targetCanonicalClassName,
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters),
+                    typeToCanonicalTypeName(augmentedClass)
                 );
             }
         }
@@ -764,20 +687,13 @@ public final class PainlessLookupBuilder {
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for method [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()),
+                typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -787,38 +703,26 @@ public final class PainlessLookupBuilder {
             try {
                 methodHandle = lookup(targetClass).unreflect(javaMethod);
             } catch (IllegalAccessException iae) {
-                throw new IllegalArgumentException(
-                    "method handle not found for method "
-                        + "[["
-                        + targetClass.getCanonicalName()
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "], "
-                        + "with lookup ["
-                        + lookup(targetClass)
-                        + "]",
-                    iae
+                throw lookupException(
+                    iae,
+                    "method handle not found for method [[%s], [%s], %s], with lookup [%s]",
+                    targetClass.getCanonicalName(),
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters),
+                    lookup(targetClass)
                 );
             }
         } else {
             try {
                 methodHandle = lookup(augmentedClass).unreflect(javaMethod);
             } catch (IllegalAccessException iae) {
-                throw new IllegalArgumentException(
-                    "method handle not found for method "
-                        + "[["
-                        + targetClass.getCanonicalName()
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                        + "with augmented class ["
-                        + typeToCanonicalTypeName(augmentedClass)
-                        + "]",
-                    iae
+                throw lookupException(
+                    iae,
+                    "method handle not found for method [[%s], [%s], %s] with augmented class [%s]",
+                    targetClass.getCanonicalName(),
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters),
+                    typeToCanonicalTypeName(augmentedClass)
                 );
             }
         }
@@ -852,28 +756,17 @@ public final class PainlessLookupBuilder {
                 painlessClassBuilder.methods.put(painlessMethodKey.intern(), newPainlessMethod);
             }
         } else if (newPainlessMethod.equals(existingPainlessMethod) == false) {
-            throw new IllegalArgumentException(
+            throw lookupException(
                 "cannot add methods with the same name and arity but are not equivalent for methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingPainlessMethod.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessMethod.typeParameters())
-                    + "]"
+                    + "[[%s], [%s], [%s], %s] and [[%s], [%s], [%s], %s]",
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(returnType),
+                typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(existingPainlessMethod.returnType()),
+                typesToCanonicalTypeNames(existingPainlessMethod.typeParameters())
             );
         }
     }
@@ -895,17 +788,12 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = canonicalClassNamesToClasses.get(targetCanonicalClassName);
 
         if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "], ["
-                    + canonicalTypeNameParameter
-                    + "]]"
+            throw lookupException(
+                "target class [%s] not found for field [[%s], [%s], [%s]]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                fieldName,
+                canonicalTypeNameParameter
             );
         }
 
@@ -919,29 +807,23 @@ public final class PainlessLookupBuilder {
             augmentedClass = loadClass(
                 classLoader,
                 augmentedCanonicalClassName,
-                () -> "augmented class ["
-                    + augmentedCanonicalClassName
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "]"
+                () -> Strings.format(
+                    "augmented class [%s] not found for field [[%s], [%s]]",
+                    augmentedCanonicalClassName,
+                    targetCanonicalClassName,
+                    fieldName
+                )
             );
         }
 
         Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
         if (typeParameter == null) {
-            throw new IllegalArgumentException(
-                "type parameter ["
-                    + canonicalTypeNameParameter
-                    + "] not found "
-                    + "for field [["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "]"
+            throw lookupException(
+                "type parameter [%s] not found for field [[%s], [%s]]",
+                canonicalTypeNameParameter,
+                targetCanonicalClassName,
+                fieldName
             );
         }
 
@@ -976,32 +858,22 @@ public final class PainlessLookupBuilder {
         PainlessClassBuilder painlessClassBuilder = classesToPainlessClassBuilders.get(targetClass);
 
         if (painlessClassBuilder == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "], ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "]]"
+            throw lookupException(
+                "target class [%s] not found for field [[%s], [%s], [%s]]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                fieldName,
+                typeToCanonicalTypeName(typeParameter)
             );
         }
 
         if (isValidType(typeParameter) == false) {
-            throw new IllegalArgumentException(
-                "type parameter ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "], ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "]]"
+            throw lookupException(
+                "type parameter [%s] not found for field [[%s], [%s], [%s]]",
+                typeToCanonicalTypeName(typeParameter),
+                targetCanonicalClassName,
+                fieldName,
+                typeToCanonicalTypeName(typeParameter)
             );
         }
 
@@ -1011,16 +883,12 @@ public final class PainlessLookupBuilder {
             try {
                 javaField = targetClass.getField(fieldName);
             } catch (NoSuchFieldException nsfe) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for field "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "]]",
-                    nsfe
+                throw lookupException(
+                    nsfe,
+                    "reflection object not found for field [[%s], [%s], [%s]]",
+                    targetCanonicalClassName,
+                    fieldName,
+                    typeToCanonicalTypeName(typeParameter)
                 );
             }
         } else {
@@ -1028,48 +896,32 @@ public final class PainlessLookupBuilder {
                 javaField = augmentedClass.getField(fieldName);
 
                 if (Modifier.isStatic(javaField.getModifiers()) == false || Modifier.isFinal(javaField.getModifiers()) == false) {
-                    throw new IllegalArgumentException(
-                        "field [["
-                            + targetCanonicalClassName
-                            + "], ["
-                            + fieldName
-                            + "] "
-                            + "with augmented class ["
-                            + typeToCanonicalTypeName(augmentedClass)
-                            + "] must be static and final"
+                    throw lookupException(
+                        "field [[%s], [%s]] with augmented class [%s] must be static and final",
+                        targetCanonicalClassName,
+                        fieldName,
+                        typeToCanonicalTypeName(augmentedClass)
                     );
                 }
             } catch (NoSuchFieldException nsfe) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for field "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "]]"
-                        + "with augmented class ["
-                        + typeToCanonicalTypeName(augmentedClass)
-                        + "]",
-                    nsfe
+                throw lookupException(
+                    nsfe,
+                    "reflection object not found for field [[%s], [%s], [%s]] with augmented class [%s]",
+                    targetCanonicalClassName,
+                    fieldName,
+                    typeToCanonicalTypeName(typeParameter),
+                    typeToCanonicalTypeName(augmentedClass)
                 );
             }
         }
 
         if (javaField.getType() != typeToJavaType(typeParameter)) {
-            throw new IllegalArgumentException(
-                "type parameter ["
-                    + typeToCanonicalTypeName(javaField.getType())
-                    + "] "
-                    + "does not match the specified type parameter ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "] "
-                    + "for field [["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "]"
+            throw lookupException(
+                "type parameter [%s] does not match the specified type parameter [%s] for field [[%s], [%s]]",
+                typeToCanonicalTypeName(javaField.getType()),
+                typeToCanonicalTypeName(typeParameter),
+                targetCanonicalClassName,
+                fieldName
             );
         }
 
@@ -1094,26 +946,18 @@ public final class PainlessLookupBuilder {
             PainlessField newPainlessField = new PainlessField(javaField, typeParameter, annotations, methodHandleGetter, null);
 
             if (existingPainlessField == null) {
-                newPainlessField = painlessFieldCache.computeIfAbsent(newPainlessField, key -> key);
+                newPainlessField = painlessFieldCache.computeIfAbsent(newPainlessField, Function.identity());
                 painlessClassBuilder.staticFields.put(painlessFieldKey.intern(), newPainlessField);
             } else if (newPainlessField.equals(existingPainlessField) == false) {
-                throw new IllegalArgumentException(
-                    "cannot add fields with the same name but are not equivalent for fields "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] and "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + existingPainlessField.javaField().getName()
-                        + "], "
-                        + typeToCanonicalTypeName(existingPainlessField.typeParameter())
-                        + "] "
-                        + "with the same name and different type parameters"
+                throw lookupException(
+                    "cannot add fields with the same name but are not equivalent for fields [[%s], [%s], [%s]] and [[%s], [%s], [%s]]"
+                        + " with the same name and different type parameters",
+                    targetCanonicalClassName,
+                    fieldName,
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    existingPainlessField.javaField().getName(),
+                    typeToCanonicalTypeName(existingPainlessField.typeParameter())
                 );
             }
         } else {
@@ -1140,23 +984,15 @@ public final class PainlessLookupBuilder {
                 newPainlessField = painlessFieldCache.computeIfAbsent(newPainlessField, key -> key);
                 painlessClassBuilder.fields.put(painlessFieldKey.intern(), newPainlessField);
             } else if (newPainlessField.equals(existingPainlessField) == false) {
-                throw new IllegalArgumentException(
-                    "cannot add fields with the same name but are not equivalent for fields "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] and "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + existingPainlessField.javaField().getName()
-                        + "], "
-                        + typeToCanonicalTypeName(existingPainlessField.typeParameter())
-                        + "] "
-                        + "with the same name and different type parameters"
+                throw lookupException(
+                    "cannot add fields with the same name but are not equivalent for fields [[%s], [%s], [%s]] and [[%s], [%s], [%s]]"
+                        + " with the same name and different type parameters",
+                    targetCanonicalClassName,
+                    fieldName,
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    existingPainlessField.javaField().getName(),
+                    typeToCanonicalTypeName(existingPainlessField.typeParameter())
                 );
             }
         }
@@ -1180,38 +1016,18 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = loadClass(classLoader, targetJavaClassName, () -> "class [" + targetJavaClassName + "] not found");
         String targetCanonicalClassName = typeToCanonicalTypeName(targetClass);
 
-        if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
-            );
-        }
-
         List<Class<?>> typeParameters = new ArrayList<>(canonicalTypeNameParameters.size());
 
         for (String canonicalTypeNameParameter : canonicalTypeNameParameters) {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for imported method "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for imported method [[%s], [%s], %s]",
+                    canonicalTypeNameParameter,
+                    targetCanonicalClassName,
+                    methodName,
+                    canonicalTypeNameParameters
                 );
             }
 
@@ -1221,17 +1037,12 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for imported method [[%s], [%s], %s]",
+                returnCanonicalTypeName,
+                targetCanonicalClassName,
+                methodName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -1260,11 +1071,9 @@ public final class PainlessLookupBuilder {
         if (existingTargetClass == null) {
             javaClassNamesToClasses.put(targetClass.getName().intern(), targetClass);
         } else if (existingTargetClass != targetClass) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + targetCanonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                targetCanonicalClassName
             );
         }
 
@@ -1279,17 +1088,12 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "not found for imported method [["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for imported method [[%s], [%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
@@ -1297,17 +1101,12 @@ public final class PainlessLookupBuilder {
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for imported method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType),
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1316,46 +1115,32 @@ public final class PainlessLookupBuilder {
         try {
             javaMethod = targetClass.getMethod(methodName, javaTypeParameters.toArray(new Class<?>[typeParametersSize]));
         } catch (NoSuchMethodException nsme) {
-            throw new IllegalArgumentException(
-                "imported method reflection object [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] not found",
-                nsme
+            throw lookupException(
+                nsme,
+                "imported method reflection object [[%s], [%s], %s] not found",
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for imported method [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for imported method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()),
+                typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
         if (Modifier.isStatic(javaMethod.getModifiers()) == false) {
-            throw new IllegalArgumentException(
-                "imported method [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] must be static"
+            throw lookupException(
+                "imported method [[%s], [%s], %s] must be static",
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1374,16 +1159,12 @@ public final class PainlessLookupBuilder {
         try {
             methodHandle = lookup(targetClass).unreflect(javaMethod);
         } catch (IllegalAccessException iae) {
-            throw new IllegalArgumentException(
-                "imported method handle [["
-                    + targetClass.getCanonicalName()
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] not found",
-                iae
+            throw lookupException(
+                iae,
+                "imported method handle [[%s], [%s], %s] not found",
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1404,29 +1185,17 @@ public final class PainlessLookupBuilder {
             newImportedPainlessMethod = painlessMethodCache.computeIfAbsent(newImportedPainlessMethod, key -> key);
             painlessMethodKeysToImportedPainlessMethods.put(painlessMethodKey.intern(), newImportedPainlessMethod);
         } else if (newImportedPainlessMethod.equals(existingImportedPainlessMethod) == false) {
-            throw new IllegalArgumentException(
-                "cannot add imported methods with the same name and arity "
-                    + "but do not have equivalent methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingImportedPainlessMethod.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingImportedPainlessMethod.typeParameters())
-                    + "]"
+            throw lookupException(
+                "cannot add imported methods with the same name and arity but do not have equivalent methods "
+                    + "[[%s], [%s], [%s], %s] and [[%s], [%s], [%s], %s]",
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(returnType),
+                typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(existingImportedPainlessMethod.returnType()),
+                typesToCanonicalTypeNames(existingImportedPainlessMethod.typeParameters())
             );
         }
     }
@@ -1454,17 +1223,12 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for class binding "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], [%s], %s]",
+                    canonicalTypeNameParameter,
+                    targetCanonicalClassName,
+                    methodName,
+                    canonicalTypeNameParameters
                 );
             }
 
@@ -1474,17 +1238,12 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for class binding "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for class binding [[%s], [%s], %s]",
+                returnCanonicalTypeName,
+                targetCanonicalClassName,
+                methodName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -1513,11 +1272,9 @@ public final class PainlessLookupBuilder {
         if (existingTargetClass == null) {
             javaClassNamesToClasses.put(targetClass.getName().intern(), targetClass);
         } else if (existingTargetClass != targetClass) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + targetCanonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                targetCanonicalClassName
             );
         }
 
@@ -1546,46 +1303,32 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = typeParameters.get(typeParameterIndex);
 
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
             Class<?> javaTypeParameter = constructorParameterTypes[typeParameterIndex];
 
             if (isValidType(javaTypeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
             if (javaTypeParameter != typeToJavaType(typeParameter)) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(javaTypeParameter)
-                        + "] "
-                        + "does not match the specified type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "for class binding [["
-                        + targetClass.getCanonicalName()
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] does not match the specified type parameter [%s] for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(javaTypeParameter),
+                    typeToCanonicalTypeName(typeParameter),
+                    targetClass.getCanonicalName(),
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
         }
@@ -1623,80 +1366,54 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = typeParameters.get(constructorParameterTypes.length + typeParameterIndex);
 
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
             Class<?> javaTypeParameter = javaMethod.getParameterTypes()[typeParameterIndex];
 
             if (isValidType(javaTypeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
             if (javaTypeParameter != typeToJavaType(typeParameter)) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(javaTypeParameter)
-                        + "] "
-                        + "does not match the specified type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "for class binding [["
-                        + targetClass.getCanonicalName()
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] does not match the specified type parameter [%s] for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(javaTypeParameter),
+                    typeToCanonicalTypeName(typeParameter),
+                    targetClass.getCanonicalName(),
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for class binding "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for class binding [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType),
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for class binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for class binding [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()),
+                typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1711,14 +1428,11 @@ public final class PainlessLookupBuilder {
         }
 
         if (Modifier.isStatic(javaMethod.getModifiers())) {
-            throw new IllegalArgumentException(
-                "class binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] cannot be static"
+            throw lookupException(
+                "class binding [[%s], [%s], %s] cannot be static",
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1735,31 +1449,17 @@ public final class PainlessLookupBuilder {
             newPainlessClassBinding = painlessClassBindingCache.computeIfAbsent(newPainlessClassBinding, Function.identity());
             painlessMethodKeysToPainlessClassBindings.put(painlessMethodKey.intern(), newPainlessClassBinding);
         } else if (newPainlessClassBinding.equals(existingPainlessClassBinding) == false) {
-            throw new IllegalArgumentException(
-                "cannot add class bindings with the same name and arity "
-                    + "but do not have equivalent methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingPainlessClassBinding.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessClassBinding.typeParameters())
-                    + "]"
+            throw lookupException(
+                "cannot add class bindings with the same name and arity but do not have equivalent methods "
+                    + "[[%s], [%s], [%s], %s] and [[%s], [%s], [%s], %s]",
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(returnType),
+                typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(existingPainlessClassBinding.returnType()),
+                typesToCanonicalTypeNames(existingPainlessClassBinding.typeParameters())
             );
         }
     }
@@ -1785,17 +1485,12 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for instance binding "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for instance binding [[%s], [%s], %s]",
+                    canonicalTypeNameParameter,
+                    targetCanonicalClassName,
+                    methodName,
+                    canonicalTypeNameParameters
                 );
             }
 
@@ -1805,17 +1500,12 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for class binding "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for class binding [[%s], [%s], %s]",
+                returnCanonicalTypeName,
+                targetCanonicalClassName,
+                methodName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -1846,11 +1536,9 @@ public final class PainlessLookupBuilder {
         if (existingTargetClass == null) {
             javaClassNamesToClasses.put(targetClass.getName().intern(), targetClass);
         } else if (existingTargetClass != targetClass) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + targetCanonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                targetCanonicalClassName
             );
         }
 
@@ -1865,17 +1553,12 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "not found for instance binding [["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for instance binding [[%s], [%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
@@ -1883,17 +1566,12 @@ public final class PainlessLookupBuilder {
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for imported method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType),
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1902,46 +1580,32 @@ public final class PainlessLookupBuilder {
         try {
             javaMethod = targetClass.getMethod(methodName, javaTypeParameters.toArray(new Class<?>[typeParametersSize]));
         } catch (NoSuchMethodException nsme) {
-            throw new IllegalArgumentException(
-                "instance binding reflection object [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] not found",
-                nsme
+            throw lookupException(
+                nsme,
+                "instance binding reflection object [[%s], [%s], %s] not found",
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for instance binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for instance binding [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()),
+                typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
         if (Modifier.isStatic(javaMethod.getModifiers())) {
-            throw new IllegalArgumentException(
-                "instance binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] cannot be static"
+            throw lookupException(
+                "instance binding [[%s], [%s], %s] cannot be static",
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1968,34 +1632,19 @@ public final class PainlessLookupBuilder {
             newPainlessInstanceBinding = painlessInstanceBindingCache.computeIfAbsent(newPainlessInstanceBinding, key -> key);
             painlessMethodKeysToPainlessInstanceBindings.put(painlessMethodKey.intern(), newPainlessInstanceBinding);
         } else if (newPainlessInstanceBinding.equals(existingPainlessInstanceBinding) == false) {
-            throw new IllegalArgumentException(
-                "cannot add instances bindings with the same name and arity "
-                    + "but do not have equivalent methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "], "
-                    + painlessAnnotations
-                    + " and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingPainlessInstanceBinding.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessInstanceBinding.typeParameters())
-                    + "], "
-                    + existingPainlessInstanceBinding.annotations()
+            throw lookupException(
+                "cannot add instances bindings with the same name and arity but do not have equivalent methods "
+                    + "[[%s], [%s], [%s], %s], %s and [[%s], [%s], [%s], %s], %s",
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(returnType),
+                typesToCanonicalTypeNames(typeParameters),
+                painlessAnnotations,
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(existingPainlessInstanceBinding.returnType()),
+                typesToCanonicalTypeNames(existingPainlessInstanceBinding.typeParameters()),
+                existingPainlessInstanceBinding.annotations()
             );
         }
     }
@@ -2014,20 +1663,20 @@ public final class PainlessLookupBuilder {
 
         if (javaClassNamesToClasses.values().containsAll(canonicalClassNamesToClasses.values()) == false) {
             throw new IllegalArgumentException(
-                "the values of java class names to classes " + "must be a superset of the values of canonical class names to classes"
+                "the values of java class names to classes must be a superset of the values of canonical class names to classes"
             );
         }
 
         if (javaClassNamesToClasses.values().containsAll(classesToPainlessClasses.keySet()) == false) {
             throw new IllegalArgumentException(
-                "the values of java class names to classes " + "must be a superset of the keys of classes to painless classes"
+                "the values of java class names to classes must be a superset of the keys of classes to painless classes"
             );
         }
 
         if (canonicalClassNamesToClasses.values().containsAll(classesToPainlessClasses.keySet()) == false
             || classesToPainlessClasses.keySet().containsAll(canonicalClassNamesToClasses.values()) == false) {
             throw new IllegalArgumentException(
-                "the values of canonical class names to classes " + "must have the same classes as the keys of classes to painless classes"
+                "the values of canonical class names to classes must have the same classes as the keys of classes to painless classes"
             );
         }
 
@@ -2048,7 +1697,7 @@ public final class PainlessLookupBuilder {
         }
 
         for (Class<?> subClass : classesToPainlessClassBuilders.keySet()) {
-            List<Class<?>> superInterfaces = new ArrayList<>(Arrays.asList(subClass.getInterfaces()));
+            Deque<Class<?>> superInterfaces = new ArrayDeque<>(Arrays.asList(subClass.getInterfaces()));
 
             // we check for Object.class as part of the allow listed classes because
             // it is possible for the compiler to work without Object
@@ -2087,7 +1736,7 @@ public final class PainlessLookupBuilder {
             Set<Class<?>> resolvedInterfaces = new HashSet<>();
 
             while (superInterfaces.isEmpty() == false) {
-                Class<?> superInterface = superInterfaces.remove(0);
+                Class<?> superInterface = superInterfaces.removeFirst();
 
                 if (resolvedInterfaces.add(superInterface)) {
                     if (classesToPainlessClassBuilders.containsKey(superInterface)) {
@@ -2119,12 +1768,10 @@ public final class PainlessLookupBuilder {
             }
 
             if (javaMethods.size() != 1 && targetClass.isAnnotationPresent(FunctionalInterface.class)) {
-                throw new IllegalArgumentException(
-                    "class ["
-                        + typeToCanonicalTypeName(targetClass)
-                        + "] "
-                        + "is illegally marked as a FunctionalInterface with java methods "
-                        + javaMethods
+                throw lookupException(
+                    "class [%s] is illegally marked as a FunctionalInterface with java methods %s",
+                    typeToCanonicalTypeName(targetClass),
+                    javaMethods
                 );
             } else if (javaMethods.size() == 1) {
                 java.lang.reflect.Method javaMethod = javaMethods.get(0);
